This file tracks changes since the last Museek+ svn trunk revision.

0.1: (01.07.2013)
-Switched from cmake to tup.
-Dropped PyMucipher bindings in favour of pycrypto (affects python bindings).
-Dropped Mucipher library in favour of nettle.
-muscan uses newsoul's configmanager (drops whole libxml++ dependency chain).
-Added systemd service file, but removed SysV one.
-Made some minor fixes.

0.2:
-Moved to premake4 (it will stay for now).
-Dropped libogg/libvorbis+custom code in favour of taglib.
-Fixed ignoring umask on directory creation.
-Fixed compilation on FreeBSD.
-Completely redesigned configuration file, using JSON instead of XML.
-New CLI configuration utility to supersede nssetup.